--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en" class="bg-base-300" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <title>Client</title>
