--- a/client/src/features/home/home.html
+++ b/client/src/features/home/home.html
@@ -14,6 +14,8 @@
       </div>
     </div>
   } @else {
-    <div class="text-2xl text-center flex justify-center">Register Form Goes Here!</div>
+    <div class="text-2xl text-center flex justify-center">
+      <app-register class="w-full"/>
+    </div>
   }
 </div>
