--- a/client/src/features/account/register/register.html
+++ b/client/src/features/account/register/register.html
@@ -6,14 +6,8 @@
       <input class="input w-full" name="email" [(ngModel)]="credentials.email" placeholder="Email">
       <input class="input w-full" name="displayName" [(ngModel)]="credentials.displayName" placeholder="Display Name">
       <input type="password" class="input w-full" name="password" [(ngModel)]="credentials.password" placeholder="Password">
-      <select class="select w-full">
-        <option disabled selected>Pick a Member</option>
-        @for (member of membersFromHome(); track $index){
-          <option value="{{member.id}}">{{member.displayName}}</option>
-        }
-      </select>
       <div class="flex items-center justify-end gap-3 ">
-        <button class="btn">Cancel</button>
+        <button class="btn" (click)="cancel()" type="button">Cancel</button>
         <button class="btn btn-primary" type="submit">Register</button>
       </div>
     </form>
