--- a/client/src/features/home/home.html
+++ b/client/src/features/home/home.html
@@ -8,14 +8,14 @@
         <h1 class="text-5xl font-bold">Find your match!</h1>
         <p class="py-6">Come on in.. all you need to do is sign up!</p>
         <div class="flex items-center gap-3">
-          <button class="btn btn-primary btn-lg" (click)="showRegister()">Register</button>
+          <button class="btn btn-primary btn-lg" (click)="showRegister(true)">Register</button>
           <button class="btn btn-info btn-lg">Learn More</button>
         </div>
       </div>
     </div>
   } @else {
     <div class="text-2xl text-center flex justify-center">
-      <app-register [membersFromHome]="membersFromApp" class="w-full"/>
+      <app-register (cancelRegistration)="showRegister($event)" class="w-full"/>
     </div>
   }
 </div>
